RbA Build/src/objects/Procedure_Code_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Procedure_Code__r.Procedure_Code_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <label>Procedure Code</label>
        <referenceTo>Procedure_Code__c</referenceTo>
        <relationshipLabel>Service Product Assignment</relationshipLabel>
        <relationshipName>Product_Procedure_Codes1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Procedure_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Procedure Code Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Procedure_Code__c</columns>
        <columns>Description__c</columns>
        <columns>Service_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Procedure Code Assignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedure Code Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>